src/modules/transport-mode/icon/icon.module.css
.transportIcons {
  display: flex;
  gap: 0.125rem;
}

.transportIcon {
  display: inline-block;
  border-radius: token('border.radius.circle');
  padding: token('spacing.xSmall');
}

.transportIconWithLabelContainer {
  display: flex;
  align-items: center;
}

.transportIconWithLabel {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: token('border.radius.circle');
  padding: token('spacing.small') token('spacing.medium');
}

.transportIconWithLabel__hasNotification {
  padding-right: calc(token('spacing.medium') + token('spacing.small'));
}

.transportIconNotification {
  margin-left: calc(
    -1 * (token('border.width.medium') + token('icon.size.small') / 2)
  );
  background-color: token('color.background.neutral.0.background');
  border-radius: 50%;
  padding: token('border.width.medium');
  line-height: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

.transportIcon img,
.transportIconWithLabel img {
  display: block;
}

.transportIconWithLabel__label {
  margin-left: token('spacing.xSmall');
}

.transportIconWithLabel__duration {
  align-self: flex-end;
  transform: translateY(25%);
  margin-left: -0.125rem;
}

